--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     This is Body from Master branch.
     This body is from Test-Branch-GD.
     Thanks looks good.
+    Did you like the updates?
 </body>
 
 </html>
